--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 asgiref==3.3.4
+certifi==2021.5.30
+chardet==4.0.0
 Django==3.2.4
+django-rest-auth==0.9.5
 djangorestframework==3.12.4
+idna==2.10
+Pillow==8.2.0
 pytz==2021.1
+requests==2.25.1
+six==1.16.0
 sqlparse==0.4.1
+urllib3==1.26.5
